# django-skystore-project

./: .env.template  .gitignore  README.md  pyproject.toml
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: create_groups.py  createsu.py  fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_and_more.py  0002_feedback_alter_contact_options.py  0003_alter_contact_options.py  0004_product_is_published.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: main_menu.html
config/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  register.html
