[project]
name = "django-projects-new"
version = "0.1.0"
description = ""
authors = [
    {name = "Ваше Имя",email = "An2rei-84@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "pillow (>=10.2.0)",
    "python-dotenv (>=1.0.0)",
    "psycopg2-binary (>=2.9.9)",
    "ipython (>=8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
